<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:theme="@style/App.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_notifications"
        android:icon="@drawable/ic_notifications"
        android:visible="false"
        android:title="@string/action_notifications"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_export_pdf"
        android:icon="@drawable/ic_pdf"
        android:title="@string/menu_export_pdf"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/action_web_server"
        android:icon="@drawable/ic_pc_server"
        android:title="@string/action_notifications"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/menu_filter"
        android:visible="false"
        app:showAsAction="always|collapseActionView" />
</menu>