<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person"
        android:hint="@string/account_name_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogAccountNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number_hint"
        app:startIconDrawable="@drawable/ic_phone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogPhoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="@string/account_type_hint"
        android:textAppearance="?attr/textAppearanceLabelLarge" />
    <LinearLayout
        android:id="@+id/accounts_range_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_type_spinner_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:layout_marginBottom="4dp"
            android:hint="@string/menu_account_types">

            <AutoCompleteTextView
                android:id="@+id/spinner_account_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:textSize="12dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                tools:text="@string/filter_customers"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/dialogAccountTypeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">
        <RadioButton android:id="@+id/radioGeneral" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_type_general" android:checked="true"/>
        <RadioButton android:id="@+id/radioCustomer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_type_customer"/>
        <RadioButton android:id="@+id/radioSupplier" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/account_type_supplier"/>
    </RadioGroup>
</LinearLayout>