<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_alert"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/titel_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trans_limit_titel"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/red_500"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/no_transaction_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transaction_limit"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginBottom="24dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_invite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_invite_friend"
            android:layout_marginBottom="12dp"
            app:icon="@drawable/ic_invite_friend"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_watch_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/menu_watch_ad"
            android:layout_marginBottom="12dp"
            app:icon="@drawable/ic_play_circle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_purchase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/menu_purchase_app"
        android:layout_marginBottom="12dp"
        app:icon="@drawable/ic_shopping_cart" />
     </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

</LinearLayout>